--- a/views/route_data.ejs
+++ b/views/route_data.ejs
@@ -50,7 +50,7 @@
                 <a href="/add_faculty_data" class="text-decoration-none">
                     <div class="d-flex justify-content-between bg-primary rounded-3 mt-2 py-4 card-shadow">
                         <div class="mx-2">
-                            <h44 class="text-white">Facality</h44>
+                            <h44 class="text-white">Faculty</h44>
                         </div>
                         <div class="me-2">
                             <img width="40px" height="30px" src="assets/images/2.png" alt="" />
@@ -125,7 +125,7 @@
                         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header p-4">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Create Route Data</h5>
+                                    <h5 class="modal-title" id="staticBackdropLabel">Add new Route</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
@@ -173,7 +173,7 @@
                         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header p-4">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Create Stops Data</h5>
+                                    <h5 class="modal-title" id="staticBackdropLabel">Add new Stop</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
@@ -288,7 +288,7 @@
                     <div
                         class="employee-displaying d-flex flex-wrap-reverse align-items-center justify-content-between p-3 border-top">
                         <div class="d-flex flex-wrap-reverse align-items-center mt-md-0 mt-3">
-                            <p class="mb-0 mt-sm-0 mt-1 displaying-records">Displaying 10 for 230 records</p>
+                            <p class="mb-0 mt-sm-0 mt-1 displaying-records">Displaying 10 out of 230 records</p>
                             <div class="d-flex justify-content-center align-items-center ms-sm-0 ms-2">
                                 <select class="ms-sm-4 form-select input-flied gray border-0">
                                     <option>5</option>
@@ -419,7 +419,7 @@
     </script>
     <footer class="mxc">
         <div class="mtc rounded-3 p-1 gap-2 bg-primary">
-            <h5 class="text-white">CU BSU portal</h5>
+            <h5 class="text-white">CUI BUS portal</h5>
         </div>
     </footer>
 
