--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -24,7 +24,7 @@
             <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow">
                 <div class="py-3">
                   
-                    <p class="small text-white my-5">may 13,2024 </p>
+                    <p class="small text-white my-5">May 13,2024 </p>
                     <h2 class="mb-0 text-white">Welcome Admin !</h2>
                     <p class="mb-0 text-white">Always stay updated in your Bus portal</p>
                 </div>
@@ -49,7 +49,7 @@
 
                     <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow mt-3">
                         <div class="">
-                            <h2 class="mb-lg-5 text-white">Aplication For Aprovel !</h2>
+                            <h2 class="mb-lg-5 text-white">Application For Approvel !</h2>
                             
                         </div>
                         <div class="me-2">
@@ -68,23 +68,32 @@
                                 
                               
                           
-                                <div class="col-lg-3 my-3">
-                                    <div class="bg-white card-Shadow rounded-2 mb-3 p-2 "style="height:200px; width: 200px;" bis_skin_checked="1">
-                                        
-                                        <a  href="">
-                                            <img src="assets/images/icons/close.svg" height="10px" width="10px" alt="" style="float:right"> 
-                                        </a>
-                                        
-                                        <div class="m-2">
+                               
+                                <% notif.forEach(n=>{ %>
+                                    <div class="col-lg-3 my-3">
+                                        <div class="bg-white card-Shadow rounded-2 mb-3 p-2 "style="height:200px; width: 200px;" bis_skin_checked="1">
                                             
-                                            <h5>Welcome</h5>
-                                            <p>potel is for you</p>
-                                            <br>
-                                            <p>may 13,204</p>
+                                            <a  href="">
+                                                <img src="assets/images/icons/close.svg" height="10px" width="10px" alt="" style="float:right"> 
+                                            </a>
+                                            
+    
+                                           
+                                            <div class="m-2">
+                                                
+                                                <h5><%=n.heading %></h5>
+                                                <p><%=notif.notes %></p>
+                                                <br>
+                                              
+                                                <% let fullString = n.update_at.toString(); %>
+                                                <% let desiredPart = fullString.substring(0, 21); %>
+                                                         
+                                                <p><%=desiredPart %></p>
+                                            </div>
+                                        
                                         </div>
-                                       
                                     </div>
-                                </div>
+                                <% }); %>
                             </div>
                         </div>
                     </div>
@@ -110,7 +119,7 @@
    
    <footer class="mxc">
     <div class=" mtc rounded-3 p-1 gap-2 bg-color">
-       <h5 class="text-white">CU BSU portal</h5>
+       <h5 class="text-white">CUI BUS portal</h5>
     </div>
 </footer>
 
