--- a/views/admin_send_notfi_fc.ejs
+++ b/views/admin_send_notfi_fc.ejs
@@ -35,7 +35,7 @@
                     <a href="/admin_sn_fc" class="text-decoration-none">
                         <div class="d-flex justify-content-between bg-color rounded-3 mt-2 py-4 card-shadow">
                             <div class="mx-2">
-                                <h44 class="text-white">To Facality</h44>
+                                <h44 class="text-white">To Faculty</h44>
                             </div>
                             <div class="me-2">
                                 <img width="40px" height="30px" src="assets/images/2.png" alt="" />
