--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,12 +57,12 @@
               <img src="assets/images/logo1.png" class="border-2" width="250px" height="250px" alt="">
             </div>
             <div class="d-flex justify-content-center align-items-center">
-              <h3>Campus Weel Comsats</h3>
+              <h3>Campus Wheel Comsats</h3>
             </div>
           </div>
         </div>
         <div class="col-5 rounded-3 busImg">
-          <div class="mxc myc border-bottom border-dark w-50">
+          <div class="mxc myc  border-dark w-50">
             <button type="button" class="btn btn-primary" id="admin-btn">Admin</button>
             <button type="button" class="btn btn-primary" id="faculty-btn">Faculty</button>
             <button type="button" class="btn btn-primary" id="student-btn">Student</button>
@@ -76,7 +76,7 @@
               </div>
               <input type="password" class="mxc1 my-2 rounded-1 px-4" id="password" name="password" required placeholder="Password">
               <br>
-              <span><a href="#" id="show-signup" class="mxc1 text-danger">SignUp here</a></span>
+              <span><a href="#" id="show-signup" class="mxc1 text-danger">SignUp Here</a></span>
               <input type="submit" class="mxc0 my-2 rounded-1" value="Log in">
             </form>
           </div>
@@ -172,7 +172,7 @@
               </div>
               <div class="col-6">
                 <div class="mb-2">
-                  <label for="" class="form-label regular small">email address</label>
+                  <label for="" class="form-label regular small">Email Address</label>
                   <input type="text" class="form-control"  name="email" placeholder="Please Enter"/>
                 </div>
               </div>
