--- a/public/Style/login_style.css
+++ b/public/Style/login_style.css
@@ -90,3 +90,20 @@
 .login-bg {
   background: linear-gradient(to right, #a91cd4, #0a30d8);
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  background-color: rgba(255, 255, 255, 0.35);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.35);
+}/*# sourceMappingURL=style.css.map */
