--- a/public/navbars.ejs
+++ b/public/navbars.ejs
@@ -36,115 +36,20 @@
                     <li class="nav-item ps-4 px-3 mb-3">
                         <a  href="/add_stu_data"   class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
                             id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/nav-user-icon.svg#users-icon"></use>
-                            </svg>
-                            <span class="hide-show Navigation-title mb-0 d-none">Users</span>
-
-                          
+                            <img src="./assets/images/database-setting-stroke-rounded (3).png"  width="20" height="20" alt="">
+                            <span class="hide-show Navigation-title mb-0 d-none">data enter</span>                          
                         </a>
                     </li>
-                    <!-- Services Div -->
+
+                    
                     <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
+                        <a  href="/admin/logout"   class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
                             id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/seasor--icon.svg#seasor-icon"></use>
-                            </svg>
-
-                            <span class="hide-show Navigation-title mb-0 d-none">Services</span>
-
-                          
+                            <img src="./src/logout-03-stroke-rounded.png"  width="20" height="20" alt="">
+                            <span class="hide-show Navigation-title mb-0 d-none">logout</span>                          
                         </a>
                     </li>
-                    <!-- Categories Div -->
-                    <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
-                            id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/categories-icon.svg#categories-icon"></use>
-                            </svg>
-
-                            <span class="hide-show Navigation-title mb-0 d-none">Categories</span>
-
-                          
-                        </a>
-                    </li>
-                    <!-- Bookings Div -->
-                    <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
-                            id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/pages-nav-icon.svg#pages-nav-icon"></use>
-                            </svg>
-
-                            <span class="hide-show Navigation-title mb-0 d-none">Bookings</span>
-
-                          
-                            <svg class="float-end hide-show d-none arrow-icon" width="4.922" height="8.486">
-                                <use href="assets/images/icons/Navbar-icons/Arrow-icon.svg#arrow-right"></use>
-                            </svg>
-                        </a>
-                        <ul class="list-unstyled bar m-0 mt-2 hide-show d-none" style="display: none">
-                            <li class="mb-1">
-                                <a class="Navigation-page-link text-decoration-none d-flex align-items-center" href="#">
-                                    <div class="Navigation-dot ms-3"></div>
-                                    <span class="ps-3"> Booking Requests </span>
-                                </a>
-                            </li>
-                            <li class="mb-1">
-                                <a class="Navigation-page-link text-decoration-none d-flex align-items-center" href="#">
-                                    <div class="Navigation-dot ms-3"></div>
-                                    <span class="ps-3"> Upcoming Bookings </span>
-                                </a>
-                            </li>
-                            <li class="mb-1">
-                                <a class="Navigation-page-link text-decoration-none d-flex align-items-center" href="#">
-                                    <div class="Navigation-dot ms-3"></div>
-                                    <span class="ps-3"> Booking History</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <!-- Gallery Div -->
-                    <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
-                            id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/Gallery-nav-icon.svg#gallery-icon"></use>
-                            </svg>
-                            <span class="hide-show Navigation-title mb-0 d-none">Gallery</span>
-
-                          
-                        </a>
-                    </li>
-                    <!-- Sales Div -->
-                    <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
-                            id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/Navbar-icons/Charts-icon.svg#charts-icon"></use>
-                            </svg>
-
-                            <span class="hide-show Navigation-title mb-0 d-none">Sales</span>
-
-                          
-                        </a>
-                    </li>
-                    <!-- Account Div -->
-                    <li class="nav-item ps-4 px-3 mb-3">
-                        <a class="btn nav-link p-2 Navigation-btn w-100 text-start border-0 bg-transparent"
-                            id="drop-icon-right1">
-                            <svg class="Nav-svg" width="20" height="20">
-                                <use href="assets/images/icons/setting-nav-icon.svg#setting-icon"></use>
-                            </svg>
-
-                            <span class="hide-show Navigation-title mb-0 d-none">Account</span>
-
-                          
-                        </a>
-                    </li>
+                    
                 </ul>
             </nav>
         </div>
