--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                  </a> 
-
+                <a href="#" class="text-decoration-none">
                     <div class="d-flex justify-content-between bg-color rounded-3 p-3 gap-2 card-shadow mt-3">
                         <div class="">
                             <h2 class="mb-lg-5 text-white">Application For Approvel !</h2>
@@ -56,6 +56,7 @@
                             <img width="126px" height="110px " src="./assets/images/Frame 35.png" alt="" />
                         </div>
                     </div>
+                </a>
                 </div>
                 <div class="col-lg-8" bis_skin_checked="1">
                     <div class="bg-color card-Shadow rounded-2 mb-3 p-4" bis_skin_checked="1">
@@ -73,11 +74,10 @@
                                     <div class="col-lg-3 my-3">
                                         <div class="bg-white card-Shadow rounded-2 mb-3 p-2 "style="height:200px; width: 200px;" bis_skin_checked="1">
                                             
-                                            <a  href="">
+                                            <a  href="/dell_ai_notif/<%=n.ain_id%>">
                                                 <img src="assets/images/icons/close.svg" height="10px" width="10px" alt="" style="float:right"> 
                                             </a>
-                                            
-    
+                                   
                                            
                                             <div class="m-2">
                                                 
